css/style.css
/* ... */
#main-menu.on {
  height: 100%;
}

#menu-inner {
  height: 100vh;
}

#main-menu a {
  color: inherit;
}

#close-menu-link {
  position: absolute;
  z-index: 10;
  top: 30px;
  right: 30px;
  font-size: 1.8rem;
  font-weight: 600;
  vertical-align: middle;
}

#close-menu-link i:before{
  font-size: 3.3rem;
  vertical-align: middle;
}

#menu-list {
  padding: 0;
  margin: 0 auto;
  max-width: 450px;
  list-style: none;
  font-size: 3.2rem;
  line-height: 1;
}

.menu-link {
  padding: 12px 0;
  display: block;
  position: relative;
}

.menu-link:after {
  content: '';
  display: inline-block;
  width: 0;
  height: 1px;
  position: absolute;
  bottom: 0;
  left: 50%;
  background: rgba(255,255,255,.8);
  -webkit-transition: all 200ms ease-in-out;
  -moz-transition: all 200ms ease-in-out;
  -o-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.menu-link:hover:after,
.menu-link.active:after {
  width: 100%;
  left: 0;
}

#instantclick-bar {
  background: #f93f00;
  height: 4px;
}

/*-----------------------------------------------------
  Main Content Area:
------------------------------------------------------*/

#container {
  position: relative;
  z-index: 10;
}

/*-----------------------------------------------------
  Home Page: #banner-panel
------------------------------------------------------*/

.home-side-nav {
  display: none;
}

.home-page-container,
.home-page,
#banner-panel {
  height: 100%;
}

.naaw-its-mattie {
  position: absolute;
  bottom: 0;
  left: 50%;
  z-index: 999;
  margin-left: -190px;
  transform: translateY(0);
  opacity: 1;
  transition: all 500ms ease;
  width: 340px;
}

.naaw-its-mattie img {
  display: block;
}

.woof-woof {
  position: absolute;
  right: 0;
  bottom: 20px;
  display: block;
  color: #fff;
  font-weight: bold;
  letter-spacing: -1px;
  text-shadow: 1px 1px 3px rgba(0,0,0,0.50);
}

.naaw-its-mattie.hide {
  transform: translateY(-5px);
  opacity: 0;
}

.mattie-link {
  display: block;
  position: relative;
}

.tail-tip {
  position: absolute;
  bottom: 0;
  left: 25px;
  display: block;
  height: 38px;
  width: 45px;
  overflow: hidden;
}

.tip-wag {
  position: absolute;
  top: 0;
  -webkit-animation: tip-wag 7s infinite;
  -moz-animation: tip-wag 7s infinite;
}

@-webkit-keyframes tip-wag {
  25% {transform: translateX(0) rotate(0deg);}
  29% {transform: translateX(5px) rotate(5deg); }
  31% {transform: translateX(-5px) rotate(-5deg);}
  33% {transform: translateX(5px) rotate(4deg);}
  35% {transform: translateX(-5px) rotate(-4deg);}
  37% {transform: translateX(5px) rotate(3deg);}
  39% {transform: translateX(-5px) rotate(-3deg);}
  41% {transform: translateX(5px) rotate(2deg);}
  44% {transform: translateX(0px) rotate(0deg);}
}

.covervid-wrapper {
  position: absolute;
  z-index: 1;
  top: 4px;
  left: 0;
  width: 100%;
  height: calc(100% - 4px);
}

.covervid-wrapper:before {
  content: '';
  position: absolute;
  z-index: 50;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: url(../img/video-overlay.png) repeat;
}

.banner-text-wrap {
  display: block;
  position: absolute;
  z-index: 100;
  top: 0;
  left: 0;
  box-sizing: content-box;
  width: 100%;
  height: calc(100% - 70px);
  overflow: hidden;
  /* allow for menu bar */
  padding-top: 70px;
  /* fix z-index issues on panel change */
  -webkit-transform: translate3d(0px, 0px, 0px);
  transform: translate3d(0px, 0px, 0px);
}

.banner-title {
  margin: 0;
  position: relative;
  display: inline-block;
  font-size: 6.2rem;
  line-height: 1;
  color: #fff;
  text-shadow: 1px 1px 3px rgba(0,0,0,0.50);
}

.js-accordion-text {
  position: relative;
  width: 0;
  overflow: hidden;
  transition: width 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
}

.js-text {
  position: relative;
  display: inline-block;
  box-sizing: content-box;
  min-height: 62px;
  opacity: 0;
  transition: opacity 600ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
}

.js-text-alt {
  display: block;
  text-align: left;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  transform: translateY(60px);
  transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
}

.js-text-alt.active {
  opacity: 1;
  position: static;
  transform: translateY(0);
}

.panel-inner {
  text-align: center;
}

.cols-wrap {
  margin-top: 40px;
}

.col {
  display: inline-block;
  vertical-align: top;
}

.middle {
  vertical-align: middle;
}

.col-half {
  width: 45%;
  margin: 0 2%;
}

/*-----------------------------------------------------
  Home Page: #work-panel
------------------------------------------------------*/

.years-wrap {
  position: relative;
  width: 100%;
  max-width: 457px;
  list-style: none;
  padding: 0;
  margin: 0 auto;
  overflow: hidden;
}

.years-overlay {
  position: relative;
  z-index: 5;
}

.years-overlay img {
  display: block;
  width: 100%;
  height: auto;
}

.montage img {
  width: 473px;
  height: auto;
  position: absolute;
  top: -8px;
  left: -8px;
}

.js-parallax,
.js-parallax * {
  -webkit-transform: translateZ(0) scale(1.0, 1.0);
}

#work-panel-content {
  font-size: 2rem;
  line-height: 1.5;
}

#work-panel-content p {
  margin-bottom: 40px;
}

/*-----------------------------------------------------
  Home Page: #clients-panel
------------------------------------------------------*/

.logo-grid {
  list-style: none;
  padding: 0;
  margin: 0 auto 30px auto;
  text-align: center;
}

.grid-item {
  display: inline-block;
  width: 24.5%;
}

.grid-item-link {
  display: block;
  width: 75%;
  height: 150px;
  margin: 0 auto;
  background-size: 100% auto !important;
}

.grid-item-link.square-logo {
  background-size: auto 65% !important;
}

/*-----------------------------------------------------
  Home Page: #value-panel
------------------------------------------------------*/

.value-wheel-wrap {
  position: relative;
}
/* ... */

